ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: rene-test
  name: rene-test
spec:
  finalizers:
    - kubernetes
status:
  phase: Active
